Promote versions and update examples #35
Updated examples: 
1. Promoted kotlin version
2. updated java example to comply java 11
3. Enabled multiple solutions for kotlin sudoku